--- a/shadowrocketConfig/shadowrocket.conf
+++ b/shadowrocketConfig/shadowrocket.conf
@@ -11,11 +11,11 @@ ipv6 = false
 
 [Rule]
 # Advert 广告屏蔽
-DOMAIN-SET,https://anti-ad.net/surge2.txt,REJECT
+DOMAIN-SET,https://raw.githubusercontent.com/wwnhahaxiao/temp/main/shadowrocketConfig/ad-reject.txt,REJECT
 # Global 全球加速
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list, PROXY
+RULE-SET,https://raw.githubusercontent.com/wwnhahaxiao/temp/main/shadowrocketConfig/proxy.list, PROXY
 # China  国内直连
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list, DIRECT
+RULE-SET,https://raw.githubusercontent.com/wwnhahaxiao/temp/main/shadowrocketConfig/direct.list, DIRECT
 
 GEOIP,CN,DIRECT
 FINAL,PROXY
